Revision history for Spreadsheet-HTML

1.12
    - reminder: animate has been deprecated since v1.05

1.11
    - can now load GIF, JPEG and PNG images
    - added block param for tweaking image2table output
    - remove bugtracker from Makefile (issues should go to rt.cpan)
    - trying to render invalid datastructures gracefully fails
    - require HTML::AutoTag v1.04

1.10
    - moved select() and list() tests out of distro

1.09
    - renamed some params for select() (see docs)
    - mktable help option can now inform about methods and parameters
    - select() option attr properly handles code refs & default items
    - enabled headless param for list() and select()
    - select() is no longer exported

1.08
    - added select() for generating <select> lists
    - removed empty (&nbsp;) from <ol> and <ul> lists
    - fixed bug in benchmark-spreadsheet-html (cannot use array ref for tr param)
    - require HTML::AutoTag v1.03

1.07
    - added encoding and empty to list()

1.06
    - added list() preset (for making HTML lists)
    - removed unecessary 'use Spreadsheet::HTML::Presets' from presets

1.05
    - !! animate is now deprectated, use scroll instead (animate will return ...) !!
    - you may safely encode ampersand and still have &nbsp; work
    - added encode param (boolean) to augment encodes param (string of chars to encode)
    - encoding now takes place within _process instead of delegating to HTML::AutoTag
    - require HTML::AutoTag v1.02
    - mktable: added sep to list of skipped params (is this safe?)

1.04
    - Spreadsheet::Read options now available via ::File::Loader

1.03
    - init HTML::TableExtract with ( decode => 0 )
    - make SH::Engine method "private"
    - correct SH::Engine and SH::Presets POD
    - require HTML::AutoTag v1.01

1.02
    - broken, do not use

1.01
    - require HTML::AutoTag v1.00

1.00
    - ensure presets are customizable

0.43
    - added new preset tictactoe()
    - moved chess sub into its package

0.42